crates/solidity/testing/snapshots/bindings_output/using/built_ins_results/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected CloseBrace or OpenBrace or ReturnsKeyword or Semicolon.
   ╭─[ input.sol:3:5 ]
   │
 3 │ ╭─▶     function test(bytes memory x) public pure {
   ┆ ┆   
 5 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
    │ 
  8 │ library Utils {
    │         ──┬──  
    │           ╰──── name: 2
  9 │     function post(bytes32 x) public returns (bytes32) {
    │              ──┬─         ┬  
    │                ╰───────────── name: 3
    │                           │  
    │                           ╰── name: 4
    │
    ├─[ input.sol:1:1 ]
    │
  2 │     using Utils for bytes32;
    │           ──┬──  
    │             ╰──── ref: 2
    │ 
 10 │         return x;
    │                ┬  
    │                ╰── ref: 4
────╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ ╭───▶ contract Test {
    ┆ ┆     
  6 │ ├─│ ▶ }
    │ │ │       
    │ ╰───────── definiens: 1
  7 │   ╭─▶ 
    ┆   ┆   
 12 │   ├─▶ }
    │   │       
    │   ╰─────── definiens: 2
    │
    ├─[ input.sol:1:1 ]
    │
  9 │ ╭─▶     function post(bytes32 x) public returns (bytes32) {
    ┆ ┆   
 11 │ ├─▶     }
    │ │           
    │ ╰─────────── definiens: 3
    │
    ├─[ input.sol:1:1 ]
    │
  9 │     function post(bytes32 x) public returns (bytes32) {
    │                   ────┬────  
    │                       ╰────── definiens: 4
────╯
